<resources>
    <string name="app_name">Investimentos</string>
    <string name="money_invest">Quanto você gostaria de aplicar? *</string>
    <string name="due_date">Qual a data de vencimento do investimento? *</string>
    <string name="cdi_percentage">Qual o percentual do CDI do investimento? *</string>
    <string name="real_currency">R$</string>
    <string name="day_month_year">dia/mês/ano</string>
    <string name="percentage_cdi">ex: 100%</string>
    <string name="simulate_button">Simular</string>
    <string name="simulation">Resultado da simulação</string>
    <string name="simulation_result">R$ 1.088,69</string>
    <string name="income">Rendimento total de</string>
    <string name="total_money_yield">R$ 88,69</string>
    <string name="simulate_again">Simular novamente</string>
    <string name="enter_value_error_message">Preencha o campo</string>
    <string name="simulation_information_result">Resultado</string>
    <string name="enter_date_format_error_message">Preencha no formato válido ex: 10/10/2000</string>
    <string name="enter_money_value_error_message">Preencha o campo</string>
    <string name="enter_current_date_error_message">Digite uma data posterior a atual</string>
    <string name="informationType">Tipo de informação</string>
    <string name="amount_initially_invested">Valor aplicado inicialmente</string>
    <string name="gross_investment_amount">Valor bruto do investimento</string>
    <string name="income_value">Valor do rendimento</string>
    <string name="investment_income_tax">IR sobre o investimento</string>
    <string name="net_investment_value">Valor líquido do investimento</string>
    <string name="redemption_date">Data de resgate</string>
    <string name="ir_percentage">(10%)</string>
    <string name="string_concatenation_simulation_result">%s %s</string>
</resources>
