<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/mainMoneyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="32dp"
            android:text="@string/money_invest"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mainDueDataTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/gray_100"
            app:boxBackgroundColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDueDataTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainDueDataEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_200"
                android:gravity="center"
                android:hint="@string/day_month_year"
                android:inputType="date"
                android:textAlignment="center"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_100"
                android:textSize="38sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mainMoneyTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/gray_100"
            app:boxBackgroundColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainMoneyTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainMoneyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_200"
                android:gravity="center"
                android:hint="@string/real_currency"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_100"
                android:textSize="38sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mainCdiPercentageTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/gray_100"
            app:boxBackgroundColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainCdiPercentageTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainCdiPercentageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_200"
                android:gravity="center"
                android:hint="@string/percentage_cdi"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_100"
                android:textSize="38sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/mainCdiPercentageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:text="@string/cdi_percentage"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDueDataTextInputLayout" />

        <Button
            android:id="@+id/mainSimulateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:backgroundTint="@color/gray_100"
            android:text="@string/simulate_button_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainCdiPercentageTextInputLayout" />

        <TextView
            android:id="@+id/mainDueDataTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:text="@string/due_date"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainMoneyTextInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>